replace deprecated URL constructor usage